welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:3: error: ambiguous reference to overloaded definition,
both method & in class Int of type (x: Char)Int
and  method & in class Int of type (x: Short)Int
match expected type ?
	if (nums(i)=nums(i+1) & nums(i+1)=nums(i+2)){
                              ^